Fix Paypal button z-index issue when menu is open

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -35,7 +35,7 @@
     }
 
     .extendednavigation.open {
-        z-index: 2;
+        z-index: 1000;
     }
 
     &.row-editing {
